[artf583544]- Fixed alignment issue in Build warning tab and login page.

--- a/phresco-framework-web/src/main/webapp/theme/photon/css/media-queries.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/media-queries.css
@@ -1980,7 +1980,7 @@ Width >= 1280 and height >= 800
 	#warningmsg {
      	display: none;
      	width: auto; 
-     	left : 29.8%; 
+     	left : 33.6%; 
      	position: absolute; 
      	text-align: center;
      	padding: 4px 6px;
